--- a/style3.css
+++ b/style3.css
@@ -34,3 +34,74 @@
     text-decoration:none;
     
 }
+
+
+/* Navbar Styling */
+.navbar {
+    background-color: #222;
+    padding: 10px 0;
+}
+
+.nav-menu {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+}
+
+.nav-menu li {
+    position: relative;
+}
+
+.nav-item {
+    display: block;
+    padding: 15px 20px;
+    color: white;
+    text-decoration: none;
+}
+
+.nav-item:hover {
+    background-color: #bdbbbb;
+}
+
+/* Dropdown Styling */
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #ffffff;
+    list-style:none;
+    padding: 0;
+    margin: 0;
+    
+    width: 150px;
+}
+
+.dropdown-menu li {
+    border-bottom: 1px solid #555;
+    list-style:none;
+    padding: 0;
+    margin: 0;
+}
+
+.dropdown-menu a {
+    display: block;
+    padding: 10px;
+    color: black;
+    text-decoration: none;
+    background-color: #fffefe;
+}
+
+.dropdown-menu a:hover {
+    background-color: #bdbbbb;
+}
+
+/* Show dropdown on hover */
+.dropdown:hover .dropdown-menu {
+    display: block;
+}
+
+/* Hover effect for navbar */
+.navbar:hover {
+    background-color: #333;
+}
